--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/material-ui": "^0.21.16",
     "ra-data-simple-rest": "^4.16.6",
     "react": "^18.2.0",
     "react-admin": "^4.16.6",
